logs/zotmer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pykmer'...
Listing './lib/python3.5/site-packages/pykmer/container'...
Listing './lib/python3.5/site-packages/pykmer-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zotmer'...
Compiling './lib/python3.5/site-packages/zotmer/cli.py'...
***   File "./lib/python3.5/site-packages/zotmer/cli.py", line 27
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zotmer/commands'...
Compiling './lib/python3.5/site-packages/zotmer/commands/contigs.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/contigs.py", line 80
    print '>contig_%d\n%s' % (i, ''.join(s))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/dist.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/dist.py", line 101
    print '\n'.join(msg)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/dump.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/dump.py", line 25
    print '%s\t%d' % (render(K, x), c)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/hist.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/hist.py", line 23
    print '%s\t%d\t%d' % (inp, f, c)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/info.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/info.py", line 15
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zotmer/commands/jaccard.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/jaccard.py", line 109
    print '%s\t%s\t%d\t%d\t%d\t%d\t%f' % (fns[i], fns[j], len(xs), len(ys), isec, union, d)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/kmerize.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/kmerize.py", line 87
    print '%d\t%d' % (l, c)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/mlst.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/mlst.py", line 54
    print '%s\t%d\t%s' % (inp, j, idx.names[j])
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/scan.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/scan.py", line 422
    print '%d\t%d\t%d\t%g\t%g\t%g\t%s\t%s' % (i, lens[i], len(a), kd, c2, pv, nms[i], a)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/spoligo.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/spoligo.py", line 205
    print '%s\t%s\t%s' % (inp, nms[i], res[i])
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zotmer/commands/vars.py'...
***   File "./lib/python3.5/site-packages/zotmer/commands/vars.py", line 64
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zotmer/library'...
Listing './lib/python3.5/site-packages/zotmer-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
